# c_review

./: README.md
#10_multiple_files/: main.c
#11_fork/: main  main.c
#12_design_pattern/Liskov's Substitution Principle  Object Oriented Design_files/: getSegment.html  highslide.css  index.3b493a601e9312c93e7fea55dcc755f7.html  template_css.css
#12_design_pattern/code/c++/complex/: complex  complex.cpp
#12_design_pattern/code/c++/fo/: fo  fo.cpp
#12_design_pattern/code/c++/function-like/: fl  fl.cpp
#12_design_pattern/code/c++/greeter/: greeter  greeter.cpp
#12_design_pattern/code/c++/virtual/: v.cpp
#13_pooled_allocation/: not-pooled.cpp
#14_1_ref_counting/: Main.cpp  String.h  StringValue.cpp  StringValue.h
#15_review/ptr_convert/: ptr_convert  ptr_convert.c
#1_basic1/: CMakeLists.txt
#2_check_bit/: check_bit.cpp  util.h
#3_number_roller/: number_roller.cpp  test
#4_template/: CMakeLists.txt  Stack.cpp  Stack.h  Stack.h.gch  main.cpp
#5_cstring/: cstring  cstring.cpp
#6_linux1/: foo  foo.c
#7_functions/: const_ptr  const_ptr.cpp  cstr_ptr.cpp  cstr_str  strlen  strlen.cpp
basic1/: fib.c
check_bit/: CMakeLists.txt  check_bit.cpp
